<resources>
    <string name="filter_vcode">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="app_name">bitman</string>
    <string name="bind_phone_email_seuccss">绑定号码邮箱成功</string>
    <string name="bind_google_seuccss">绑定Google成功</string>
    <string name="login_success">登录成功</string>
    <string name="esc_login_success">退出登录</string>
    <string name="user_identity_authen_success">上传资料成功</string>
    <string name="registered_choosecountries">选择国家和地区</string>
    <string name="login_email">邮箱登录</string>
    <string name="login_phone">手机号登录</string>
    <string name="login_email_hint">请输入邮箱</string>
    <string name="login_phone_hint">请输入手机号码</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login_login">登录</string>
    <string name="login_forget_pwd">忘记密码</string>
    <string name="registered">注册</string>
    <string name="use_login_email_hint">使用邮箱登录</string>
    <string name="use_login_phone_hint">使用手机号登录</string>
    <string name="login_phone_thereare">手机号码已注册</string>
    <string name="login_phone_to_login">该手机号码已注册，请直接登录</string>
    <string name="to_login">去登录</string>
    <string name="login_show_errer">邮箱或密码错误，您还有3次尝试机会</string>
    <string name="login_show_errer_phone">手机或密码错误，您还有3次尝试机会</string>
    <string name="lregistered_reading">请阅读并同意DCE用户协议</string>
    <string name="registered_phone_errer">号码格式不正确</string>
    <string name="registered_pasd_errer">密码格式不正确,请输入 6-16位数字加英文</string>
    <string name="registered_eamil_errer">邮箱格式不正确</string>
    <string name="registered_phone">手机号注册</string>
    <string name="registered_email">邮箱注册</string>
    <string name="registered_hint_code">请输入验证码</string>
    <string name="registered_get_code">获取验证码</string>
    <string name="registered_oax_xy">我已阅读并同意</string>
    <string name="registered_oax_agreement">用户服务条款</string>
    <string name="registered_next">下一步</string>
    <string name="registered_go_login">已有账号？ 去登录</string>
    <string name="use_registered_phone_hint">使用手机号注册</string>
    <string name="use_registered_email_hint">使用邮箱注册</string>
    <string name="registered_cx_get_cede">重新获取</string>
    <string name="registered_code_errer">验证码错误</string>
    <string name="registered_success_to_login">注册成功，请登录</string>
    <string name="update_passwrod_success_to_login">密码修改成功，请登录</string>
    <string name="show_hint_email_thereisno">邮箱账户不存在</string>
    <string name="show_hint_phone_thereisno">手机账户不存在</string>
    <string name="forgot_phone_title">通过手机找回密码</string>
    <string name="forgot_email_title">通过邮箱找回密码</string>
    <string name="setpwd_eamil_title">通过邮箱找回密码</string>
    <string name="setpwd_phone_title">通过手机找回密码</string>
    <string name="setpwd_the_title">设置密码</string>
    <string name="setpwd_lin_hint">设置密码，6 - 16位数字加英文</string>
    <string name="old_setpwd_lin_hint">请输入旧密码</string>
    <string name="repeat_setpwd_lin_hint">重复密码，6 - 16位数字加英文</string>
    <string name="setpwd_lin_hint_yes">确认密码</string>
    <string name="setpwd_commit">提交</string>
    <string name="update_login_success">重置密码成功,请重新登录</string>
    <string name="forgot_email_show">通过邮箱找回密码</string>
    <string name="forgot_phone_show">通过手机找回密码</string>
    <string name="forgot_phone_registered">注册手机号</string>
    <string name="forgot_input_phone"> 请输入手机号码</string>
    <string name="forgot_eamil_registered">注册邮箱</string>
    <string name="forgot_input_eamil">请输入邮箱</string>
    <string name="dialog_validation">安全验证</string>
    <string name="dialog_email">邮箱:</string>
    <string name="dialog_get_code">获取验证码</string>
    <string name="dialog_phone">手机号码:</string>
    <string name="dialog_google">谷歌验证码</string>
    <string name="dialog_commit">提交</string>
    <string name="address_error">地址格式错误</string>
    <string name="assets_get_sum">持有总量</string>
    <string name="assets_ky_sum">可用总量</string>
    <string name="assets_freeze_money">冻结金额</string>
    <string name="assets_btc">CNY估值</string>
    <string name="assets_market">市场</string>
    <string name="add_withdrawal_adderss_success">新增地址成功</string>
    <string name="assets">资产</string>
    <string name="mine">我的</string>
    <string name="assets_record">充提记录</string>
    <string name="assets_withdrawal">提现</string>
    <string name="assets_topup">充值</string>
    <string name="assets_my">我的资产</string>
    <string name="assets_bz">币种</string>
    <string name="assets_ky_count">可用数量</string>
    <string name="assets_dj_count">冻结数量</string>
    <string name="assets_sum">总计</string>
    <string name="assets_state">状态</string>
    <string name="assets_sum_e">总额</string>
    <string name="assets_kyzc">可用资产</string>
    <string name="assets_txje">提现金额</string>
    <string name="assets_all_tx">全部</string>
    <string name="assets_sxfy">手续费用:</string>
    <string name="assets_sjdz">实际到账:</string>
    <string name="assets_tbdz">提币地址</string>
    <string name="assets_wxts">温馨提示： 请务必填写地址Tag</string>
    <string name="assets_add">添加地址</string>
    <string name="assets_no_add">暂无地址</string>
    <string name="assets_address">地址</string>
    <string name="assets_note">备注</string>
    <string name="assets_yes_add">确认添加</string>
    <string name="assets_add_address">新增地址</string>
    <string name="assets_withdrawal_successful">提现成功</string>
    <string name="assets_coyp">复制地址</string>
    <string name="click_coyp">点击复制</string>
    <string name="assets_coyp_label">复制标签</string>
    <string name="assets_coyp_code">保存二维码</string>
    <string name="assets_add_tag">地址标签Tag</string>
    <string name="assets_icon_count">输入提币数量</string>
    <string name="add_adderss">输入地址</string>
    <string name="add_note">输入备注</string>
    <string name="assets_min_max">该类币种起提%1$s,最大提现%2$s</string>
    <string name="assets_keti_edu">您今日剩余可提现额度为%1$sBTC</string>
    <string name="assets_min_show_hint">最小可提数量：%1$s</string>
    <string name="assets_max_show_hint">最大可提数量：%1$s</string>
    <string name="assets_today_show_hint">今日可提数量：%1$s BTC</string>
    <string name="entrust_order">委托/订单</string>
    <string name="entrust">委托</string>
    <string name="order">订单</string>
    <string name="entrust_order_time">时间</string>
    <string name="entrust_order_jyd">交易对</string>
    <string name="entrust_order_jg">价格</string>
    <string name="entrust_order_count">数量</string>
    <string name="entrust_order_cz">操作</string>
    <string name="entrust_order_undo">撤单</string>
    <string name="entrust_order_lx">类型</string>
    <string name="entrust_order_ddsx">订单筛选</string>
    <string name="entrust_order_date">日期</string>
    <string name="entrust_order_market">市场</string>
    <string name="entrust_order_t">1天</string>
    <string name="entrust_order_z">1周</string>
    <string name="entrust_order_y">1月</string>
    <string name="entrust_order_3y">3月</string>
    <string name="entrust_order_all">全部</string>
    <string name="entrust_order_bz">币种</string>
    <string name="entrust_order_buy_sell">买/卖</string>
    <string name="entrust_order_buy">买入</string>
    <string name="entrust_order_sell">卖出</string>
    <string name="entrust_order_ycycx">隐藏已撤销</string>
    <string name="entrust_order_ok">完成</string>
    <string name="entrust_order_reset">重置</string>
    <string name="market">市场</string>
    <string name="reg_phone">手机注册</string>
    <string name="reg_emil">邮箱注册</string>
    <string name="reg_phone_emil_hint">请输入手机号码或邮箱</string>
    <string name="reg_code_hint">请输入验证码</string>
    <string name="reg_get_code">获取验证码</string>
    <string name="reg_set_pwd">请设置登陆密码</string>
    <string name="reg_yes_pwd">请确定登陆密码</string>
    <string name="reg_yjzhs">已有账户</string>
    <string name="reg_login">请登录</string>
    <string name="deal_setpwd">请设置交易密码</string>
    <string name="deal_yespwd">请确定交易密码</string>
    <string name="next">下一步</string>
    <string name="announcement_content_no_id">未找到公告ID，请重试</string>
    <string name="home_recommendmarketlist_success">登录成功</string>
    <string name="home">首页</string>
    <string name="home_bz">币种</string>
    <string name="home_jg_btc">价格</string>
    <string name="home_price">价格</string>
    <string name="home_optional">自选</string>
    <string name="home_jg_eth">价格</string>
    <string name="home_zdf">涨跌幅</string>
    <string name="home_qty">额:</string>
    <string name="home_hint_search">输入交易对关键词</string>
    <string name="trding_k_line">K线图</string>
    <string name="trding_buy">买</string>
    <string name="trding_sell">卖</string>
    <string name="fall_jiage">价格</string>
    <string name="fall_count">数量</string>
    <string name="trading">交易</string>
    <string name="buy">买入</string>
    <string name="sell">卖出</string>
    <string name="trading_sum">总额</string>
    <string name="trading_sxfy">手续费</string>
    <string name="trading_ky">可用</string>
    <string name="refresh_ok">刷新成功</string>
    <string name="load_ok">加载成功</string>
    <string name="load_error">请求错误</string>
    <string name="load_data_fail">请求数据失败</string>
    <string name="announcement">公告</string>
    <string name="announcement_more">查看更多</string>
    <string name="announcement_close">返回</string>
    <string name="announcement_tz">公告通知</string>
    <string name="announcement_fbr">发布人:</string>
    <string name="notice_1">关于五月份上线交易平台的公告</string>
    <string name="notice_2">至于活动什么的肯定都是放这里的</string>
    <string name="notice_3">至于活动什么的肯定都是放这里的至于活动什么的肯定都是放这里的至于活动什么的</string>
    <string name="jia">十</string>
    <string name="jian">一</string>
    <string name="hint">提示hint</string>
    <string name="setting_language_title">多语言设置</string>
    <string name="setting_language_auto">自动</string>
    <string name="setting_language_english">English</string>
    <string name="setting_simplified_chinese">简体中文</string>
    <string name="setting_traditional_chinese">繁体中文</string>
    <string name="setting_traditional_ty">ไทย</string>
    <string name="srl_header_pulling">下拉可以刷新</string>
    <string name="srl_header_refreshing">正在刷新…</string>
    <string name="srl_header_loading">正在加载…</string>
    <string name="srl_header_release">释放立即刷新</string>
    <string name="srl_header_finish">刷新完成</string>
    <string name="srl_header_failed">刷新失败</string>
    <string name="srl_header_update">上次更新 M-d HH:mm</string>
    <string name="srl_header_secondary">释放进入二楼</string>
    <string name="srl_footer_pulling">上拉加载更多</string>
    <string name="srl_footer_release">释放立即加载</string>
    <string name="srl_footer_loading">正在加载…</string>
    <string name="srl_footer_refreshing">正在刷新…</string>
    <string name="srl_footer_finish">加载完成</string>
    <string name="srl_footer_failed">加载失败</string>
    <string name="srl_footer_nothing">没有更多数据了</string>
    <string name="undefined_type">未定义类型</string>
    <string name="withdrawal_failed">失败</string>
    <string name="menu_item_switch">代理</string>
    <string name="menu_item_toggle_global">开/关全局模式</string>
    <string name="menu_item_about">关于</string>
    <string name="menu_item_exit">退出</string>
    <string name="config_url">配置地址</string>
    <string name="config_not_set_value">未设置</string>
    <string name="config_url_scan">扫描二维码</string>
    <string name="config_url_manual">手动输入</string>
    <string name="config_url_scan_hint">扫描配置地址的二维码</string>
    <string name="select_app">选择使用代理的软件</string>
    <string name="select_app_detail">未选择</string>
    <string name="submit">提交</string>
    <string name="cancel">取消</string>
    <string name="input_str">请输入12位点卡序列号</string>
    <string name="crad_input_code">请输入点卡序列号：</string>
    <string name="tips_str">温馨提示：</string>
    <string name="each_crad_str">* 每张点卡仅限兑换一次</string>
    <string name="multiple_str">* 一个账号可以使用多张点卡</string>
    <string name="please_redeem_str">* 请在点卡有效期内进行兑换，有效期截止后，点卡失效</string>
    <string name="dkdh_str">点卡兑换</string>
    <string name="bi_zhong">币种</string>
    <string name="quantity_str">数量</string>
    <string name="valid_until_str">有效期至</string>
    <string name="dec_str">UCT点卡使用后,交易所账户余额会增加等于面额数量的UCT,可正常交易,转账或者提现</string>
    <string name="exchange_str">兑换</string>
</resources>