<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp110"
        android:layout_marginLeft="@dimen/dp16"
        android:layout_marginTop="@dimen/dp15"
        android:layout_marginRight="@dimen/dp16"
        android:background="@drawable/shadow_circle"
        android:padding="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@drawable/lib_white_circle"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp16"
                android:layout_marginTop="@dimen/dp20"
                android:gravity="center"
                android:text="@string/crad_input_code"
                android:textColor="@color/text_str"
                android:textSize="@dimen/dp13" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp34"
                android:layout_marginLeft="@dimen/dp16"
                android:layout_marginTop="@dimen/dp15"
                android:layout_marginRight="@dimen/dp16"
                android:background="@drawable/gray_bg_f8f8f8">

                <EditText
                    android:id="@+id/et_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp10"
                    android:background="@null"
                    android:hint="@string/input_str"
                    android:maxLength="12"
                    android:textColor="@color/df_999999"
                    android:textSize="@dimen/dp13" />

            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp16"
        android:layout_marginTop="@dimen/dp10"
        android:gravity="center"
        android:text="@string/tips_str"
        android:textColor="@color/df_999999"
        android:textSize="@dimen/dp12" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp16"
        android:layout_marginTop="@dimen/dp16"
        android:gravity="center"
        android:text="@string/each_crad_str"
        android:textColor="@color/df_999999"
        android:textSize="@dimen/dp12" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp16"
        android:layout_marginTop="@dimen/dp16"
        android:gravity="center"
        android:text="@string/multiple_str"
        android:textColor="@color/df_999999"
        android:textSize="@dimen/dp12" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp16"
        android:layout_marginTop="@dimen/dp16"
        android:gravity="center"
        android:text="@string/please_redeem_str"
        android:textColor="@color/df_999999"
        android:textSize="@dimen/dp12" />

    <Button
        android:id="@+id/ok"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp44"
        android:layout_marginLeft="@dimen/dp16"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginRight="@dimen/dp16"
        android:background="@drawable/white_circle3"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="@dimen/dp16" />


</LinearLayout>