<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout
        android:id="@+id/fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:background="#D8D8D8" />

    <RadioGroup
        android:visibility="gone"
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp49"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/dp5">

        <RadioButton
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/home_select_icon"
            android:gravity="center"
            android:text="@string/home"
            android:textColor="@color/text_str"
            android:textSize="@dimen/dp11" />

        <RadioButton
            android:id="@+id/cls"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/trading_select_icon"
            android:gravity="center"
            android:text="@string/trading"
            android:textSize="11dp" />

        <RadioButton
            android:id="@+id/find"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/assets_select_icon"
            android:gravity="center"
            android:text="@string/assets"
            android:textSize="11dp" />

        <RadioButton
            android:id="@+id/my"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/mane_select_icon"
            android:gravity="center"
            android:text="@string/mine"
            android:textSize="11dp" />

    </RadioGroup>

</RelativeLayout>